--- a/crates/sui-cluster-test/Cargo.toml
+++ b/crates/sui-cluster-test/Cargo.toml
@@ -15,7 +15,7 @@ tokio = { workspace = true, features = ["full"] }
 jsonrpsee = { version = "0.16.2", features = ["http-client"] }
 tracing = { version = "0.1.36", features = ["log"] }
 clap = { version = "3.1.14", features = ["derive"] }
-reqwest = { version = "0.11.13", features = ["blocking", "json"] }
+reqwest = { version = "0.11.13", default_features= false, features = ["blocking", "json", "rustls-tls"] }
 async-trait = "0.1.61"
 anyhow = { version = "1.0.64", features = ["backtrace"] }
 bcs = "0.1.4"
