--- a/crates/sui-rosetta/Cargo.toml
+++ b/crates/sui-rosetta/Cargo.toml
@@ -56,4 +56,4 @@ sui-framework-build = { path = "../sui-framework-build" }
 test-utils = { path = "../test-utils" }
 tempfile = "3.3.0"
 rand = "0.8.5"
-reqwest = "0.11.13"
+reqwest = { version = "0.11.13", default_features= false, features = ["rustls-tls"] }
