--- a/narwhal/node/Cargo.toml
+++ b/narwhal/node/Cargo.toml
@@ -49,7 +49,7 @@ telemetry-subscribers.workspace = true
 workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }
 
 anemo.workspace = true
-reqwest = { version = "0.11.13", features = ["json"] }
+reqwest = { version = "0.11.13", default_features= false, features = ["json", "rustls-tls"] }
 once_cell = "1.16.0"
 fail = "0.5.1"
 
