--- a/narwhal/primary/Cargo.toml
+++ b/narwhal/primary/Cargo.toml
@@ -67,7 +67,7 @@ tracing = "0.1.36"
 tracing-test = "0.2.3"
 worker = { path = "../worker", package = "narwhal-worker" }
 storage = { path = "../storage", package = "narwhal-storage" }
-reqwest = { version = "0.11.13", features = ["json"] }
+reqwest = { version = "0.11.13", default_features= false, features = ["json", "rustls-tls"] }
 telemetry-subscribers = { path = "../../crates/telemetry-subscribers"}
 
 [features]
