--- a/crates/sui-benchmark/Cargo.toml
+++ b/crates/sui-benchmark/Cargo.toml
@@ -44,7 +44,7 @@ sui-sdk = { path = "../sui-sdk" }
 sui-keys = { path = "../sui-keys" }
 sui-node = { path = "../sui-node" }
 sui-json-rpc-types = { path = "../sui-json-rpc-types" }
-sui-protocol-constants = { path = "../sui-protocol-constants" }
+sui-protocol-config = { path = "../sui-protocol-config" }
 telemetry-subscribers.workspace = true
 roaring = "0.10.1"
 
