--- a/crates/sui-core/Cargo.toml
+++ b/crates/sui-core/Cargo.toml
@@ -31,6 +31,7 @@ bincode = "1.3.3"
 multiaddr = "0.17.0"
 prometheus = "0.13.3"
 arc-swap = "1.5.1"
+object_store = "=0.5.4"
 tokio-retry = "0.3"
 scopeguard = "1.1"
 once_cell = "1.16"
