--- a/crates/sui-storage/Cargo.toml
+++ b/crates/sui-storage/Cargo.toml
@@ -27,6 +27,9 @@ strum_macros = "^0.24"
 anyhow = "1.0.64"
 tempfile = "3.3.0"
 tap = "1.0.1"
+object_store = { version = "=0.5.4", features = ["aws", "aws_profile", "gcp", "azure"] }
+backoff = "0.4.0"
+bytes = "1.4.0"
 
 sui-simulator = { path = "../sui-simulator" }
 sui-types = { path = "../sui-types" }
