--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ members = [
     "crates/sui-swarm",
     "crates/sui-telemetry",
     "crates/sui-test-validator",
+    "crates/sui-tls",
     "crates/sui-tool",
     "crates/sui-transaction-builder",
     "crates/sui-transactional-test-runner",
