--- a/crates/sui-adapter/Cargo.toml
+++ b/crates/sui-adapter/Cargo.toml
@@ -14,6 +14,7 @@ leb128 = "0.2.5"
 once_cell = "1.16"
 linked-hash-map = "0.5.6"
 tracing = "0.1.36"
+serde = { version = "1.0.140", features = ["derive"] }
 
 move-binary-format.workspace = true
 move-bytecode-verifier.workspace = true
