--- a/crates/sui-benchmark/Cargo.toml
+++ b/crates/sui-benchmark/Cargo.toml
@@ -46,6 +46,7 @@ sui-node = { path = "../sui-node" }
 sui-json-rpc-types = { path = "../sui-json-rpc-types" }
 sui-protocol-constants = { path = "../sui-protocol-constants" }
 telemetry-subscribers.workspace = true
+roaring = "0.10.1"
 
 move-core-types.workspace = true
 narwhal-node = { path = "../../narwhal/node" }
