Adds base58 encoding support to bcs
- two functions added: `fromB58` and `toB58` similar to existing encodings
- `Reader.toString` and `de/encodeStr` methods support new `base58` value

--- a/sdk/bcs/tsconfig.json
+++ b/sdk/bcs/tsconfig.json
@@ -11,7 +11,11 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "composite": true,
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
+    "typeRoots": [
+      "@types",
+      "node_modules/@types"
+    ]
   },
   "include": ["src"]
 }
