--- a/sdk/bcs/package.json
+++ b/sdk/bcs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mysten/bcs",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "BCS - Canonical Binary Serialization implementation for JavaScript",
   "license": "Apache-2.0",
   "author": "Mysten Labs <build@mystenlabs.com>",
@@ -59,5 +59,8 @@
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
     "vitest": "^0.26.3"
+  },
+  "dependencies": {
+    "base58-js": "^1.0.5"
   }
 }
