--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -111,9 +111,10 @@ jobs:
         if: ${{ needs.diff.outputs.isTypescriptSDK == 'true' }}
         run: pnpm dlx concurrently --kill-others --success command-1 "$E2E_RUN_LOCAL_NET_CMD" 'pnpm sdk test:e2e'
 
-      - name: Run Explorer e2e tests
-        if: ${{ needs.diff.outputs.isExplorer == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'}}
-        run: pnpm explorer playwright test
+      # Re-enable when it's more stable
+      # - name: Run Explorer e2e tests
+      #   if: ${{ needs.diff.outputs.isExplorer == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'}}
+      #   run: pnpm explorer playwright test
 
       # TODO: add wallet e2e when available
 
