--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -24,8 +24,8 @@
   },
   "scripts": {
     "clean": "rm -rf tsconfig.tsbuildinfo ./dist",
-    "codegen:version": "pnpm changeset version && pnpm genversion --es6 --semi src/package-version.ts",
-    "build": "pnpm genversion --es6 --semi src/package-version.ts && pnpm build:types && tsup ./src/index.ts --format esm,cjs --sourcemap",
+    "codegen:version": "pnpm changeset version && node genversion.mjs",
+    "build": "node genversion.mjs && pnpm build:types && tsup ./src/index.ts --format esm,cjs --sourcemap",
     "build:types": "tsc --build",
     "doc": "typedoc",
     "test": "pnpm test:unit",
@@ -72,7 +72,6 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "genversion": "^3.1.1",
     "husky": "^7.0.4",
     "mockttp": "^2.7.0",
     "prettier": "^2.8.1",
