[TypeScript] Add postpublish script for generating docs

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ node_modules
 *.tsbuildinfo
 .turbo
 
+# TS SDK artifacts
+sdk/typescript/doc/
+
 # App build directories
 dist/
 storybook-static/
