--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -24,7 +24,8 @@
   },
   "scripts": {
     "clean": "rm -rf tsconfig.tsbuildinfo ./dist",
-    "build": "pnpm build:types && tsup ./src/index.ts --format esm,cjs --sourcemap",
+    "codegen:version": "pnpm changeset version && node genversion.mjs",
+    "build": "node genversion.mjs && pnpm build:types && tsup ./src/index.ts --format esm,cjs --sourcemap",
     "build:types": "tsc --build",
     "doc": "typedoc",
     "test": "pnpm test:unit",
