re-enable explorer tests

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -111,10 +111,9 @@ jobs:
         if: ${{ needs.diff.outputs.isTypescriptSDK == 'true' }}
         run: pnpm dlx concurrently --kill-others --success command-1 "$E2E_RUN_LOCAL_NET_CMD" 'pnpm sdk test:e2e'
 
-      # Re-enable when it's more stable
-      # - name: Run Explorer e2e tests
-      #   if: ${{ needs.diff.outputs.isExplorer == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'}}
-      #   run: pnpm explorer playwright test
+      - name: Run Explorer e2e tests
+        if: ${{ needs.diff.outputs.isExplorer == 'true' || needs.diff.outputs.isTypescriptSDK == 'true'}}
+        run: pnpm explorer playwright test
 
       # TODO: add wallet e2e when available
 
