--- a/crates/sui-tls/Cargo.toml
+++ b/crates/sui-tls/Cargo.toml
@@ -23,5 +23,12 @@ workspace-hack = { version = "0.1", path = "../workspace-hack" }
 # reqwest support
 reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
 
+# Axum support
+axum = "0.6.6"
+axum-server = { version = "0.4.4", default-features = false, features = ["tls-rustls"] }
+tokio-rustls = "0.23"
+tower-layer = "0.3.2"
+tokio.workspace = true
+
 [dev-dependencies]
 rand = "0.8.5"
