Do not strip debug symbols

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,9 +75,9 @@ version = "0.26.1"
 # debug = 1 means line charts only, which is minimum needed for good stack traces
 debug = 1
 # Write debug info into a separate file.
-split-debuginfo = 'packed'
+# split-debuginfo = 'packed'
 # Without stripping, sui binary size would be > 1GB.
-strip = 'debuginfo'
+strip = 'none'
 # Exit process with SIGABRT when any thread panics
 panic = 'abort'
 
