--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "wallet-adapter": "pnpm --filter ./sdk/wallet-adapter",
     "sdk": "pnpm --filter ./sdk/typescript",
     "bcs": "pnpm --filter ./sdk/bcs",
-    "frenemies": "pnpm --filter ./dapps/frenemies"
+    "frenemies": "pnpm --filter ./dapps/frenemies",
+    "changeset-version": "pnpm changeset version && pnpm sdk codegen:version"
   },
   "pnpm": {
     "overrides": {
