--- a/crates/sui-framework/Cargo.toml
+++ b/crates/sui-framework/Cargo.toml
@@ -16,6 +16,7 @@ smallvec = "1.9.0"
 once_cell = "1.16"
 curve25519-dalek-ng = "4.1.1"
 bincode = "1.3.3"
+base64 = "0.13.0"
 
 fastcrypto.workspace = true
 fastcrypto-zkp.workspace = true
