--- a/crates/sui-transaction-builder/Cargo.toml
+++ b/crates/sui-transaction-builder/Cargo.toml
@@ -16,6 +16,7 @@ sui-json-rpc-types= { path = "../sui-json-rpc-types" }
 sui-types = { path = "../sui-types" }
 sui-json = { path = "../sui-json" }
 sui-adapter =  { path = "../sui-adapter" }
+sui-protocol-config = { path = "../sui-protocol-config" }
 
 move-core-types.workspace = true
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
