--- a/sdk/bcs/package.json
+++ b/sdk/bcs/package.json
@@ -59,5 +59,8 @@
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
     "vitest": "^0.26.3"
+  },
+  "dependencies": {
+    "bs58": "^5.0.0"
   }
 }
