--- a/crates/sui-config/data/fullnode-template.yaml
+++ b/crates/sui-config/data/fullnode-template.yaml
@@ -3,8 +3,8 @@ db-path: "suidb"
 
 network-address: "/dns/localhost/tcp/8080/http"
 metrics-address: "0.0.0.0:9184"
+# this address is also used for web socket connections
 json-rpc-address: "0.0.0.0:9000"
-websocket-address: "0.0.0.0:9001"
 enable-event-processing: true
 
 genesis:
