--- a/crates/sui-benchmark/Cargo.toml
+++ b/crates/sui-benchmark/Cargo.toml
@@ -54,6 +54,14 @@ workspace-hack = { version = "0.1", path = "../workspace-hack" }
 test-utils = { path = "../test-utils" }
 sysinfo = "0.27.5"
 
+reqwest = { version = "0.11.13", features = ["json"] }
+color-eyre = "0.6.2"
+ssh2 = "0.9.4"
+prettytable-rs = "0.10"
+thiserror = "1.0.38"
+serde_yaml = "0.9.17"
+colored = "2.0.0"
+
 [target.'cfg(msim)'.dependencies]
 sui-macros = { path = "../sui-macros" }
 sui-simulator = { path = "../sui-simulator" }
