Create Sui move crate & quicker building binary 1/x (#8402)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ members = [
     "crates/sui-json-rpc-types",
     "crates/sui-keys",
     "crates/sui-macros",
+    "crates/sui-move",
     "crates/sui-network",
     "crates/sui-node",
     "crates/sui-open-rpc",
