--- a/crates/sui-node/Cargo.toml
+++ b/crates/sui-node/Cargo.toml
@@ -24,6 +24,8 @@ tower = "0.4.13"
 git-version = "0.3.5"
 const-str = "0.5.3"
 
+sui-adapter = { path = "../sui-adapter" }
+sui-framework = { path = "../sui-framework" }
 sui-config = { path = "../sui-config" }
 sui-core = { path = "../sui-core" }
 sui-storage = { path = "../sui-storage" }
