--- a/crates/sui-transaction-builder/Cargo.toml
+++ b/crates/sui-transaction-builder/Cargo.toml
@@ -12,6 +12,7 @@ async-trait = "0.1.61"
 futures = "0.3.23"
 bcs = "0.1.4"
 
+move-binary-format.workspace = true
 sui-json-rpc-types= { path = "../sui-json-rpc-types" }
 sui-types = { path = "../sui-types" }
 sui-json = { path = "../sui-json" }
