--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -30,18 +30,6 @@ jobs:
       - uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd # pin@v2.2.4
         with:
           version: 7
-
-      - name: Read Sui crate version
-        working-directory: ./
-        run: | 
-          echo "sui_version=$(cat Cargo.toml | grep '^version =' | tr -d '\"' | awk '{ print $3 }')" >> $GITHUB_ENV
-          echo "sui_version=${{ env.sui_version }}"
-
-      - name: Download sui-test-validator from current devnet release
-        uses: wei/wget@v1
-        with:
-          args: -O $PWD/target/debug/sui-test-validator https://github.com/MystenLabs/sui/releases/download/devnet-${{ env.sui_version }}/sui-test-validator
-
       - name: Install Nodejs
         uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # pin@v3
         with:
@@ -105,7 +93,12 @@ jobs:
           echo "sui_version=$(cat Cargo.toml | grep '^version =' | tr -d '\"' | awk '{ print $3 }')" >> $GITHUB_ENV
           echo "sui_version=${{ env.sui_version }}"
 
-      - name: Download sui-test-validator from current devnet release
+      - name: Download sui binary from current devnet release
+        uses: wei/wget@v1
+        with:
+          args: -O $PWD/target/debug/sui https://github.com/MystenLabs/sui/releases/download/devnet-${{ env.sui_version }}/sui
+
+      - name: Download sui-test-validator binary from current devnet release
         uses: wei/wget@v1
         with:
           args: -O $PWD/target/debug/sui-test-validator https://github.com/MystenLabs/sui/releases/download/devnet-${{ env.sui_version }}/sui-test-validator
