wallet-adapters,wallet-standard: support chain and account transaction parameters
* allow dapps/wallet-kit specify the chain and account for a transaction

--- a/sdk/wallet-adapter/wallet-kit-core/tsconfig.json
+++ b/sdk/wallet-adapter/wallet-kit-core/tsconfig.json
@@ -8,6 +8,7 @@
   },
   "references": [
     { "path": "../../typescript" },
-    { "path": "../adapters/base-adapter" }
+    { "path": "../adapters/base-adapter" },
+    { "path": "../wallet-standard" }
   ]
 }
