--- a/crates/test-utils/Cargo.toml
+++ b/crates/test-utils/Cargo.toml
@@ -27,6 +27,7 @@ sui-framework-build = { path = "../sui-framework-build" }
 sui-json-rpc = { path = "../sui-json-rpc" }
 sui-json-rpc-types= { path = "../sui-json-rpc-types" }
 sui-node = { path = "../sui-node" }
+sui-protocol-config = { path = "../sui-protocol-config" }
 sui-swarm = { path = "../sui-swarm" }
 sui-types = { path = "../sui-types" }
 sui-keys = { path = "../sui-keys" }
