--- a/crates/sui-benchmark/src/orchestrator/assets/settings.json
+++ b/crates/sui-benchmark/src/orchestrator/assets/settings.json
@@ -2,11 +2,7 @@
     "testbed": "alberto",
     "token_file": "/Users/alberto/.vultr",
     "ssh_private_key_file": "/Users/alberto/.ssh/vultr",
-<<<<<<< HEAD
-    "regions": ["atl", "lax"],
-=======
-    "regions": ["lhr", "atl", "lax"],
->>>>>>> 5a1ad39b93 (Benchmark lifecycle)
+    "regions": ["bom", "lax", "atl", "lhr", "mel", "nrt"],
     "specs": "vhp-8c-16gb-intel",
     "repository": {
         "name": "sui",
