--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -33,8 +33,7 @@
     "test:unit": "vitest run unit",
     "test:e2e": "wait-on http://127.0.0.1:9123 -l --timeout 120000 && vitest run e2e",
     "test:e2e:nowait": "vitest run e2e",
-    "prepare:e2e": "cargo build --bin sui-test-validator --bin sui --profile dev && RUST_LOG=info,sui=error,anemo_tower=warn,consensus=off cargo run --bin sui-test-validator",
-    "win-prepare:e2e": "cargo build --bin sui-test-validator --bin sui --profile dev && set RUST_LOG=info && set sui=error && set anemo_tower=warn && set consensus=off && cargo run --bin sui-test-validator",   
+    "prepare:e2e": "cargo build --bin sui-test-validator --bin sui --profile dev && cross-env RUST_LOG=info,sui=error,anemo_tower=warn,consensus=off cargo run --bin sui-test-validator",
     "lint": "eslint --max-warnings=0 src test",
     "prettier:fix": "prettier --write .",
     "prepublishOnly": "pnpm build",
@@ -70,6 +69,7 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^8.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-react-app": "^7.0.1",
