--- a/crates/sui-types/Cargo.toml
+++ b/crates/sui-types/Cargo.toml
@@ -58,4 +58,9 @@ derive_more = "0.99.17"
 [dev-dependencies]
 bincode = "1.3.3"
 test-utils = { path = "../test-utils" }
+criterion = { version = "0.4.0", features = ["async", "async_tokio"] }
 proptest = "1.0.0"
+
+[[bench]]
+name = "accumulator_bench"
+harness = false
