Revert "types: rencode ObjectDigests in base64 until TS sdk can support base58"
This reverts commit 572765e2c4a7579248a22b6bb3b176e9b5cd7b9c.

--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -403,7 +403,8 @@ ObjectArg:
               TYPENAME: SequenceNumber
           - mutable: BOOL
 ObjectDigest:
-  NEWTYPESTRUCT: BYTES
+  NEWTYPESTRUCT:
+    TYPENAME: Sha3Digest
 ObjectID:
   NEWTYPESTRUCT:
     TYPENAME: AccountAddress
