--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -95,15 +95,15 @@ jobs:
 
       - name: Download sui binary from latest devnet release
         run: |
-          mkdir -p target/debug
+          mkdir -p $PWD/target/debug
           wget -O target/debug/sui https://github.com/MystenLabs/sui/releases/latest/download/sui
-          chmod +x target/debug/sui
+          chmod +x $PWD/target/debug/sui
 
       - name: Download sui-test-validator binary from latest devnet release
         run: |
-          mkdir -p target/debug
+          mkdir -p $PWD/target/debug
           wget -O target/debug/sui-test-validator https://github.com/MystenLabs/sui/releases/latest/download/sui-test-validator
-          chmod +x target/debug/sui-test-validator
+          chmod +x $PWD/target/debug/sui-test-validator
 
       - name: Install Nodejs
         uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # pin@v3
