--- a/crates/sui-indexer/Cargo.toml
+++ b/crates/sui-indexer/Cargo.toml
@@ -15,6 +15,7 @@ chrono = { version = "0.4.23", features = [
   "clock",
   "serde",
 ] }
+rand = "0.8"
 clap = { version = "3.2.17", features = ["derive"] }
 diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2", "serde_json"] }
 futures = "0.3.23"
