Downloading latest vesions of sui and sui-test-validator (#8511)
**Description**
Instead of running builds to produce binaries that were shipped with the
current devnet release, we are instead going to pull the binaries
directly from the GitHub Release page.

**Test**
Verified that tests still pass
https://github.com/MystenLabs/sui/actions/runs/4248045135/jobs/7386762594#logs

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -87,16 +87,23 @@ jobs:
       - uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd # pin@v2.2.4
         with:
           version: 7
-      - name: Build validator for devnet
-        run: cargo build --bin sui-test-validator --profile dev
 
-      # checkout and build the current branch
+      # checkout current branch
       - uses: actions/checkout@7dd9e2a3dc350cf687eb1b2a4fadfee8c8e49675 # pin@v3
         with:
           clean: false
-      - name: Build sui bin for current branch
-        run:
-          cargo build --bin sui
+
+      - name: Download sui binary from latest devnet release
+        run: |
+          mkdir -p $PWD/target/debug
+          wget -O target/debug/sui https://github.com/MystenLabs/sui/releases/latest/download/sui
+          chmod +x $PWD/target/debug/sui
+
+      - name: Download sui-test-validator binary from latest devnet release
+        run: |
+          mkdir -p $PWD/target/debug
+          wget -O target/debug/sui-test-validator https://github.com/MystenLabs/sui/releases/latest/download/sui-test-validator
+          chmod +x $PWD/target/debug/sui-test-validator
 
       - name: Install Nodejs
         uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # pin@v3
