Add vercel config to ignore gh-pages

--- a/dapps/frenemies/vercel.json
+++ b/dapps/frenemies/vercel.json
@@ -1,6 +1,11 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+  "git": {
+    "deploymentEnabled": {
+      "gh-pages": false
+    }
+  },
   "headers": [
     {
       "source": "/assets/(.*)",
