--- a/dapps/frenemies/vercel.json
+++ b/dapps/frenemies/vercel.json
@@ -3,6 +3,7 @@
   "rewrites": [{ "source": "/(.*)", "destination": "/" }],
   "git": {
     "deploymentEnabled": {
+      "main": false,
       "gh-pages": false
     }
   },
