--- a/sdk/wallet-adapter/example/vercel.json
+++ b/sdk/wallet-adapter/example/vercel.json
@@ -2,6 +2,7 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "git": {
     "deploymentEnabled": {
+      "main": false,
       "gh-pages": false
     }
   }
