--- a/crates/sui-benchmark/Cargo.toml
+++ b/crates/sui-benchmark/Cargo.toml
@@ -61,6 +61,9 @@ prettytable-rs = "0.10"
 thiserror = "1.0.38"
 serde_yaml = "0.9.17"
 crossterm = "0.26.0"
+regex = "1.7.1"
+prometheus-parse = { git = "https://github.com/ccakes/prometheus-parse-rs.git", rev = "75334db" }
+chrono = "0.4.23"
 
 [target.'cfg(msim)'.dependencies]
 sui-macros = { path = "../sui-macros" }
