[programmable transactions] Add command index to errors
- Added command to ExecutionError, unused for non programmable transactions

--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -259,6 +259,8 @@ ExecutionStatus:
         STRUCT:
           - error:
               TYPENAME: ExecutionFailureStatus
+          - command:
+              OPTION: U64
 GenesisObject:
   ENUM:
     0:
