Adding new Exchange Integration Guide

--- a/doc/src/navconfig.json
+++ b/doc/src/navconfig.json
@@ -102,6 +102,10 @@
 				]
 			},
 			{
+				"label": "Sui Exchange Integration Guide",
+				"fileName": "learn/exchange-integration-guide"
+			},
+			{
 				"label": "Sui Exchange Integration FAQ",
 				"fileName": "learn/exchange-integration-faq"
 			}
