Specify log file

--- a/crates/sui-benchmark/src/orchestrator/assets/settings.json
+++ b/crates/sui-benchmark/src/orchestrator/assets/settings.json
@@ -8,5 +8,7 @@
         "name": "sui",
         "url": "http://github.com/mystenlabs/sui",
         "branch": "orchestrator"
-    }
+    },
+    "results_directory": "./results",
+    "logs_directory": "./logs"
 }
