Adding new Exch Integ Guide
merged FAQ with this new topic.

--- a/doc/src/navconfig.json
+++ b/doc/src/navconfig.json
@@ -102,8 +102,8 @@
 				]
 			},
 			{
-				"label": "Sui Exchange Integration FAQ",
-				"fileName": "learn/exchange-integration-faq"
+				"label": "Sui Exchange Integration Guide",
+				"fileName": "learn/exchange-integration-guide"
 			}
 		],
 		"build": [{
